--- a/src/styles/CalendarDate.css
+++ b/src/styles/CalendarDate.css
@@ -14,3 +14,15 @@
     padding: 7px;
     box-sizing: border-box;
 }
+
+.calendar .buttons {
+    display: flex;
+    justify-content: space-between;
+}
+
+.calendar .buttons button {
+    padding: 10px 20px;
+    background: #f5f5f5;
+    color: #000;
+    text-decoration: none;
+}
