button.css added

--- a/src/styles/CalendarDate.scss
+++ b/src/styles/CalendarDate.scss
@@ -19,12 +19,6 @@
 	.buttons {
 		display: flex;
 		justify-content: space-between;
-
-		button {
-			padding: 10px 20px;
-			background: #f5f5f5;
-			color: #000;
-			text-decoration: none;
-		}
+		margin-top: 14px;
 	}
 }
