--- a/src/styles/CalendarDate.css
+++ b/src/styles/CalendarDate.css
@@ -12,11 +12,7 @@
       box-sizing: border-box; }
   .calendar .buttons {
     display: flex;
-    justify-content: space-between; }
-    .calendar .buttons button {
-      padding: 10px 20px;
-      background: #f5f5f5;
-      color: #000;
-      text-decoration: none; }
+    justify-content: space-between;
+    margin-top: 14px; }
 
 /*# sourceMappingURL=CalendarDate.css.map */
